--- a/app.css
+++ b/app.css
@@ -16,6 +16,10 @@ header h1 {
   font-size: 4vw;
 }
 
+header h4 {
+  font-size: 2vw;
+}
+
 main {
   text-align: center;
   display: flex;
@@ -40,6 +44,46 @@ label {
   text-align: center;
   border-radius: 25px;
   border: 5px solid #545454;
+}
+
+.correct {
+  color: aliceblue;
+  background-color: #4B6319;
+  padding: 20px;
+  margin: 30px;
+  text-align: center;
+  border-radius: 25px;
+  border: 5px solid #545454;
+}
+
+.correct h2 {
+  display: flex;
+  flex-direction: column;
+  font-size: 3.7vw;
+}
+
+.correct h5 {
+  font-size: 2vw;
+}
+
+.incorrect {
+  color: aliceblue;
+  background-color: #B22222;
+  padding: 20px;
+  margin: 30px;
+  text-align: center;
+  border-radius: 25px;
+  border: 5px solid #545454;
+}
+
+.incorrect h2 {
+  display: flex;
+  flex-direction: column;
+  font-size: 3.7vw;
+}
+
+.incorrect h5 {
+  font-size: 2vw;
 }
 
 .mainPage h2{
